--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -21,8 +21,8 @@
   <%= f.label :password%><br>
   <%= f.password_field :password%><br>
 
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+  <%= f.label :password_confirmation %><br>
+  <%= f.password_field :password_confirmation %> <br>
 
   <%= f.submit "Create Account" %>
 <%end%>
