--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -26,4 +26,11 @@
 <%= flash[:results] %>
 <% end %>
 
+<!-- new form that accepts the flash and allows user to generate tweet to randomized user-->
+<%= form_with(url: '/tweetgenerate', method: 'post') do |f| %>
+<h2>Looks good? Press "Send tweet" to send out the tweet from the bot account.</h2>
+<h2>If you'd like to change the tweet content, select another topic from the drop down. </h2>
+<%= f.submit "Send tweet" %>
+<%end%>
+
 
