--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,1 +1,3 @@
-<h1>Your tweet has been sent!</h1>
+<h1>Your tweet has been sent! Here it is</h1>
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr"><%= #show content here %> <a href="https://twitter.com/hashtag/quotableadvice?src=hash&amp;ref_src=twsrc%5Etfw">#quotableadvice</a></p>&mdash; Tweet Your Fact (@tweet_your_fact) <a href="https://twitter.com/tweet_your_fact/status/<%= @tweet.status_number %>?ref_src=twsrc%5Etfw">June 14, 2017</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
