Our changes from Wed 7pm and thurs morn

--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,4 +1,14 @@
 <h1>Welcome to Twitterbot (can rename)</h1>
 
+
+
+<h2><% if flash[:authorization_message] %> </h2>
+    <%= flash[:authorization_message]  %>
+    <% end %>
+
+<% if flash[:success] %>
+<%= flash[:success]%>
+<% end %>
+
 <%= button_to "Login", '/login', method: :get%>
 <%= button_to "Sign Up", '/signup', method: :get%>
