--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,5 +1,7 @@
 <h1>Create a New Tweet</h1>
 
+
+
     <% if flash[:success] %>
 <h3><%= flash[:success]   %></h3>
     <% end %><br><br>
@@ -32,3 +34,9 @@
 <h2>If you'd like to change the tweet content, select another topic from the drop down. </h2>
 <%= f.submit "Send tweet" %>
 <%end%>
+
+
+
+<%= form_with(url: '/account', method: 'get') do |f| %>
+Navigate to the <%= f.submit "Account Page" %>
+<% end %>
