--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -40,3 +40,5 @@
 <%= form_with(url: '/account', method: 'get') do |f| %>
 Navigate to the <%= f.submit "Account Page" %>
 <% end %>
+
+<%= link_to "Click here to check out a list of all your tweets", tweets_path %>
