--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,6 @@
 <h1>All your tweets</h1>
 
-<ul>
-    <li></li>
+<% @tweets_html.each do |tweet_html| %>
+    <div><%= raw(tweet_html) %></div><br>
+<% end %>
 
-
-</ul>
