--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,7 @@
 <h1>All your tweets</h1>
 <% if @tweets.length > 0  %>
     <% @tweets_html.each do |tweet_html| %>
-    <div><%= raw(tweet_html) %></div><br>
+    <div class="tweets"><%= raw(tweet_html) %></div><br>
     <% end %>
 <% else %>
     <%= link_to "Click here to create more tweets", new_tweet_path %>
