--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -22,8 +22,8 @@
   <%= f.password_field :password%><br>
 
   <%= f.label :password_confirmation %><br>
-  <%= f.password_field :password_confirmation %> <br>
+  <%= f.password_field :password_confirmation %> <br><br>
 
-  <%= f.submit "Create Account" %>
+  <%= f.submit "Create Account", class: 'button' %>
 <%end%>
 </div>
