--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,11 +74,12 @@
   text-align: center;
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4  {
   font-family: helvetica;
 }
 
 .button {
+  border-radius: 25px;
   background-color: #4CAF50; /* Green */
   border: none;
   color: white;
@@ -87,8 +88,39 @@ h1, h2, h3 {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+  font-weight: bold;
+}
+.button:hover {
+  background-color: #3e8e41
 }
 
-.tweets {
+.twitter-tweet {
+ margin: 0px auto;
+}
 
+#topic {
+  font-size: 20px;
+}
+
+.flash_text {
+    font-family: Georgia, serif;
+    font-size: 18px;
+    font-style: italic;
+    width: 500px;
+    margin: 0px auto;
+    padding: 0.35em 40px;
+    line-height: 1.45;
+    position: relative;
+    color: black;
+}
+.flash_text:before {
+    display: block;
+    padding-left: 5px;
+    content: "\201C";
+    font-size: 80px;
+    position: absolute;
+    left: -20px;
+    top: -20px;
+    color: #7a7a7a;
+    
 }
