--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,9 +1,12 @@
-<h1>All your tweets</h1>
+
+
+<h1>All Your Tweets</h1>
+<div class="tweets">
 <% if @tweets.length > 0  %>
     <% @tweets_html.each do |tweet_html| %>
-    <div class="tweets"><%= raw(tweet_html) %></div><br>
+    <%= raw(tweet_html) %><br>
     <% end %>
 <% else %>
     <%= link_to "Click here to create more tweets", new_tweet_path %>
 <%end %>
-
+</div>
